--- a/src/Layout/Main.css
+++ b/src/Layout/Main.css
@@ -2,6 +2,12 @@
   padding: 10px 0;
 }
 
+.search__block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .search {
   border: 1px solid #bdbdbd;
   border-radius: 15px;
